Add GUI checkbox for agent selecting only exit direction or one specific exit Fix bugs